--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,7 @@
     "require": {
         "php": ">=7.2",
         "ext-zip": "*",
-        "monolog/monolog": "^1.24",
-        "php-java/php-java": "dev-master"
+        "monolog/monolog": "^1.24"
     },
     "autoload": {
         "psr-4": {
@@ -28,7 +27,8 @@
     "require-dev": {
         "phpunit/phpunit": "^8.0",
         "squizlabs/php_codesniffer": "^3.4",
-        "friendsofphp/php-cs-fixer": "^2.14"
+        "friendsofphp/php-cs-fixer": "^2.14",
+        "php-java/php-java": "dev-master"
     },
     "scripts": {
         "tests": "phpunit tests --stop-on-failure && phpcs --standard=phpcs.xml src"
